[gd_scene load_steps=15 format=3 uid="uid://bwi0phryprse4"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_1c5jr"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://ciac2evc5b6ow" path="res://parede.png" id="3"]
[ext_resource type="AudioStream" uid="uid://ctnjb67h4l2jy" path="res://audio/bater_asas.mp3" id="5"]
[ext_resource type="Texture2D" uid="uid://dba834k4a8lbv" path="res://morcego_1.png" id="6"]
[ext_resource type="Texture2D" uid="uid://ynr1jum3swot" path="res://morcego_2.png" id="7"]
[ext_resource type="Texture2D" uid="uid://c3cdk0eqbyn0r" path="res://morcego_3.png" id="8"]
[ext_resource type="Script" path="res://scripts/Spawnner.gd" id="8_2mbmc"]
[ext_resource type="PackedScene" uid="uid://8m774xjb4y2i" path="res://scenes/game_over.tscn" id="9_e256i"]
[ext_resource type="PackedScene" uid="uid://cs5hldv6rdh7b" path="res://scenes/damage_sound.tscn" id="10_2u37n"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(192, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_8mycq"]

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(23.5, 352)

[node name="World" type="Node2D"]
position = Vector2(960, 540)
scale = Vector2(2.59277, 2.60363)
script = ExtResource("1_1c5jr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 861.0
offset_top = 73.0
offset_right = 1229.0
offset_bottom = 208.0
scale = Vector2(0.96619, 0.875054)
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "Pontuação: 0"

[node name="PlayerNode" type="Node2D" parent="."]

[node name="UpperFloorNode" type="Node2D" parent="PlayerNode"]
position = Vector2(0, -200)
scale = Vector2(3, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="PlayerNode/UpperFloorNode"]

[node name="Sprite2D" type="Sprite2D" parent="PlayerNode/UpperFloorNode/StaticBody2D"]
scale = Vector2(6, 1)
texture = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/UpperFloorNode/StaticBody2D"]
shape = SubResource("1")

[node name="Player" type="CharacterBody2D" parent="PlayerNode" groups=["Persist"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
scale = Vector2(2.78243, 2.69727)
shape = SubResource("CircleShape2D_8mycq")

[node name="Sprite2D" type="Sprite2D" parent="PlayerNode/Player"]

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
scale = Vector2(2.78351, 2.78351)
shape = SubResource("CircleShape2D_8mycq")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
stream = ExtResource("5")
volume_db = 5.0

[node name="Timer" type="Timer" parent="PlayerNode/Player"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerNode/Player"]
sprite_frames = SubResource("4")
frame_progress = 0.951357

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]
position = Vector2(0, -4.60895)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2(-360, 0)
shape = SubResource("5")

[node name="LowerFloorNode" type="Node2D" parent="PlayerNode"]
position = Vector2(0, 200)
scale = Vector2(3, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="PlayerNode/LowerFloorNode"]

[node name="Sprite2D" type="Sprite2D" parent="PlayerNode/LowerFloorNode/StaticBody2D"]
scale = Vector2(6, 1)
texture = ExtResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/LowerFloorNode/StaticBody2D"]
shape = SubResource("1")

[node name="Spawnner" type="Node2D" parent="."]
position = Vector2(400, 0)
scale = Vector2(0.5, 0.5)
script = ExtResource("8_2mbmc")

[node name="Timer" type="Timer" parent="Spawnner"]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GameOver" parent="." instance=ExtResource("9_e256i")]
visible = false
position = Vector2(-153.118, -115.224)

[node name="DamageSound" parent="." instance=ExtResource("10_2u37n")]

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
[connection signal="timeout" from="Spawnner/Timer" to="Spawnner" method="_on_timer_timeout"]
